refactor(server): CORS 에러 해결을 위한 상세 설정 및 로깅